--- a/gmall-mbg/pom.xml
+++ b/gmall-mbg/pom.xml
@@ -9,10 +9,26 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- 所有工具类，公共依赖 -->
-    <artifactId>gmall-common</artifactId>
+    <artifactId>gmall-mbg</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
+        <!--1、引入生成器依赖-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
         <!--防止lombok报错-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -25,12 +41,6 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.8.0</version>
         </dependency>
-        <!-- fast json -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.56</version>
-        </dependency>
-
     </dependencies>
+
 </project>
