--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>gmall-common</module>
         <module>gmall-api</module>
+        <module>gmall-mbg</module>
     </modules>
 
     <!-- 父工程只用于聚合 -->
