主从数据库配置及测试

--- a/gmall-api/pom.xml
+++ b/gmall-api/pom.xml
@@ -33,5 +33,14 @@
             <!--可选依赖，只是为了防止工程mp的注解报错问题-->
             <!--<optional>true</optional>-->
         </dependency>
+        <!-- 分库分表 -->
+        <!-- https://mvnrepository.com/artifact/io.shardingjdbc/sharding-jdbc-core -->
+        <dependency>
+            <groupId>io.shardingjdbc</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
     </dependencies>
 </project>
