--- a/gmall-pms/src/main/resources/application.properties
+++ b/gmall-pms/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# 数据源配置,使用Spring的高效HikariCP作为数据源
+#spring.datasource.url=jdbc:mysql://192.168.232.129:3307/gmall_pms?useUnicode=true&useSSL=false&characterEncoding=utf8
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
 
+# dubbo配置
+dubbo.application.name=gmall-pms
+dubbo.registry.address=zookeeper://192.168.232.129:2182
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+# 作为消费者检查服务的提供者是否打开
+dubbo.consumer.check=false
