--- a/gmall-api/pom.xml
+++ b/gmall-api/pom.xml
@@ -41,6 +41,12 @@
             <version>2.0.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>5.3</version>
+        </dependency>
 
     </dependencies>
 </project>
